plugins {
    id 'java'
    id 'application'
}

group 'io.github.plamentotev'

java {
    sourceCompatibility = 11
    targetCompatibility = 11
}

application {
    mainClass = 'io.github.plamentotev.xvalid.App'
    applicationDefaultJvmArgs = ['-Xverify:none', '-XX:TieredStopAtLevel=1']
}

// Storing the dependencies on the file system (and the source code repository)
// is not a good idea but I didn't managed to find those artifacts
// in a public Maven repository that is still maintained.
dependencies {
    runtimeOnly fileTree('libs') { include '*.jar' }
}
